--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "biscoint-api-node": "^1.4.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.15.2",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
