--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "biscoint-api-node": "^1.4.1",
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
