--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "biscoint-api-node": "^1.4.1",
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
+    "nodemailer": "^6.7.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
