--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "node test.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
     "biscoint-api-node": "^1.4.1",
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
     "nodemailer": "^6.7.1",
+    "nodemon": "^2.0.15",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
