--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "buy": "node ./services/buy.js"
   },
   "dependencies": {
     "biscoint-api-node": "^1.4.1",
