--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "node test.js",
-    "buy": "node ./services/buy.js"
+    "buy": "node ./tasks/buy.js"
   },
   "dependencies": {
     "biscoint-api-node": "^1.4.1",
